# peeksort

./: peeksort.cabal
app/: Main.hs
src/: MergeSort.hs  Peeksort.hs  Powersort.hs  Timsort.hs
test/: Test.hs
